--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <img src ="">
+    <img src ="https://github.com/darknorth-123/Assignment2/blob/main/222.JPG">
     <h1>Ayush Chopda</h1>
   </body>
 </html>
