--- a/resume.html
+++ b/resume.html
@@ -2,5 +2,37 @@
   <body>
     <img src ="https://github.com/darknorth-123/Assignment2/blob/main/222.JPG">
     <h1>Ayush Chopda</h1>
+    <h4>Address: PES university, Dwarka Nagar, RR road </h4>
+    <h4>Student</h4>
+    <title>Acadamics Details</title>
+    <table>
+      <thead>
+        <th>Acadamics</th>
+        <th>Marks/GPA</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>10th Class</td>
+          <td>81.4%</td>
+        </tr>
+        <tr>
+          <td>12th Class</td>
+          <td>81.6%</td>
+        </tr>
+        <tr>
+          <td>BCA 1st year</td>
+          <td>8.77</td>
+        </tr>
+      
+      </tbody>
+    </table>
+
+    <h2>Projects</h2>
+    <ul>
+      <li>Dynamic Live Result page</li>
+      <li>Creating an app for thrifting clothes: RYFT </li>
+      <li>99 voices</li>
+    </ul>
+    
   </body>
 </html>
