--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <img src ="https://github.com/darknorth-123/Assignment2/blob/main/222.JPG">
+    <img src ="./222.JPG">
     <h1>Ayush Chopda</h1>
     <h4>Address: PES university, Dwarka Nagar, RR road </h4>
     <h4>Student</h4>
@@ -10,6 +10,7 @@
         <th>Acadamics</th>
         <th>Marks/GPA</th>
       </thead>
+      
       <tbody>
         <tr>
           <td>10th Class</td>
