--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h4>Address: PES university, Dwarka Nagar, RR road </h4>
     <h4>Student</h4>
     <title>Acadamics Details</title>
-    <table>
+    <table border ="1">
       <thead>
         <th>Acadamics</th>
         <th>Marks/GPA</th>
