--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <img src ="./222.JPG">
+    <img src ="./222.JPG" height="200" width="100">
     <h1>Ayush Chopda</h1>
     <h4>Address: PES university, Dwarka Nagar, RR road </h4>
     <h4>Student</h4>
